-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
None
-
Affects Version/s: None
-
Component/s: hotspot
This fixes a bug that was introduced when upstream enhanced freeset implementation was downported into Generational Shenandoah. This bug does not exist in openjdk/jdk traditional Shenandoah.
Currently, we are reserving regions until the capacity of each partition matches the requested reserve quantity. Capacity includes memory that is already used. Instead, we need to reserve regions until the available memory within each partition matches the requested reserve quantity.
Currently, we are reserving regions until the capacity of each partition matches the requested reserve quantity. Capacity includes memory that is already used. Instead, we need to reserve regions until the available memory within each partition matches the requested reserve quantity.
- links to
-
Commit(master)
openjdk/shenandoah-jdk21u/622d8d43
-
Commit(master)
openjdk/shenandoah/472e4c74
-
Review(master)
openjdk/shenandoah-jdk21u/73
-
Review(master)
openjdk/shenandoah/457