8335930: GenShen: Reserve regions within each generation's freeset until available is sufficient

Reviewed-by: wkemper